gitlab/gitlab/gitlab-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    name: gitlab
spec:
  rules:
  - host: code.<DOMAIN>
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 80
  - host: code-ssh.<DOMAIN>
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 22
